1. Add GoogleTest for in this project. 2. Create the EventLoop according to the design. 3. try the GoogleTest for the EventLoop class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,21 +2,23 @@ cmake_minimum_required(VERSION 3.14)
 project(NetL)
 
 SET(CMAKE_C_COMPILER "g++.exe")
-SET(CMAKE_C_FLAGS
-	 "-g"
-)
-SET(CMAKE_CXX_FLAGS
-    "-g"
-)
+SET(CMAKE_C_FLAGS "-g")
+SET(CMAKE_CXX_FLAGS "-g")
 
-SET(EXECUTABLE_OUTPUT_PATH bin)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
+SET(EXECUTABLE_OUTPUT_PATH bin)
 SET(LIBRARY_OUTPUT_PATH lib)
+
+include_directories(NetL)
+
+link_libraries("C:/cygwin64/lib/libgtest.a")
+
 
 if(CMAKE_C_COMPILER)
 	 message("-------------------- CMake is Running --------------------")
 endif()
 
+#[[
 add_executable(main
 	 main.cpp
 	 )
@@ -36,6 +38,12 @@ add_executable(unp_echo_server
 add_executable(unp_echo_client
 	 test/unp_echo_client.cpp
 	 )
+]]
+
+add_executable(gtest_EventLoopClass
+	 NetL/EventLoop.cpp
+	 test/gtest_EventLoopClass.cpp
+)
 
 
 
