--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,88 +2,24 @@ cmake_minimum_required(VERSION 3.14)
 project(NetL)
 
 SET(CMAKE_C_COMPILER "g++.exe")
-SET(CMAKE_C_FLAGS "-g")
 SET(CMAKE_CXX_FLAGS "-g")
+set(LIBS "libgtest.a")
 
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
-SET(EXECUTABLE_OUTPUT_PATH bin)
-SET(LIBRARY_OUTPUT_PATH lib)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-include_directories(NetL Base)
+include_directories(./ NetL Base)
+add_subdirectory(NetL) 
+add_subdirectory(Base)
+add_subdirectory(test/UnitTest)
+add_subdirectory(test/ManualTest)
+add_subdirectory(test/OtherTest)
 
-link_libraries("C:/cygwin64/lib/libgtest.a")
-
+link_libraries(${LIBS})
 
 if(CMAKE_C_COMPILER)
-	 message("-------------------- CMake is Running --------------------")
+    message("-------------------- CMake is Running --------------------")
 endif()
 
-#[[
-add_executable(main
-	 main.cpp
-	 )
-
-add_executable(md_echo_server
-	 test/md_echo_server.cpp
-	 )
-
-add_executable(md_echo_client
-	 test/md_echo_client.cpp
-	 )
-
-add_executable(unp_echo_server
-	 test/unp_echo_server.cpp
-	 )
-
-add_executable(unp_echo_client
-	 test/unp_echo_client.cpp
-	 )
-
-add_executable(gtest_EventLoopClass
-	 NetL/EventLoop.cpp
-	 test/gtest_EventLoopClass.cpp
-)
-
-add_executable(mtest_EventLoopClass_01
-	 NetL/EventLoop.cpp
-	 test/mtest_EventLoopClass_01.cpp
-)
-
-add_executable(mtest_EventLoopClass_02
-
-	 NetL/Channel.cpp
-	 test/mtest_EventLoopClass_02.cpp
-)
-
-
-add_executable(mtest_EventLoop+PollPoller+Channel
-	 NetL/EventLoop.cpp
-	 NetL/PollPoller.cpp
-	 NetL/Channel.cpp
-	 test/mtest_EventLoop+PollPoller+Channel.cpp
-)
-
-
-add_executable(mtest_main
-	 NetL/PollPoller.cpp
-	 NetL/Channel.cpp
-	 NetL/EventLoop.cpp
-	 Base/Timestamp.cpp
-	 NetL/Timer.cpp
-	 NetL/TimerQueue.cpp
-	 main.cpp
-)
-
-]]
-
-add_executable(mtest_EventLoopThreadClass_03
-	 NetL/PollPoller.cpp
-	 NetL/Channel.cpp
-	 NetL/EventLoop.cpp
-	 Base/Timestamp.cpp
-	 NetL/Timer.cpp
-	 NetL/TimerQueue.cpp
-	 NetL/EventLoopThread.cpp
-	 test/mtest_EventLoopThreadClass_03.cpp
-)
-
+add_executable(main main.cpp)
